<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvAdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADMIN LOGIN"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/etAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Enter password"
            android:ems="10" />

        <Button
            android:id="@+id/btnSubmitPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit" />

        <Button
            android:id="@+id/btnAdminBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Back" />

    </LinearLayout>

</FrameLayout>
