<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/browse_event_Header"
            style="@style/headerViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Browse Events" />

        <ListView
            android:id="@+id/list_of_events"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmSelectedDeleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/confirm_delete" />

</FrameLayout>