...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remove Images"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnBrowseEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Browse Events"
        android:layout_marginBottom="8dp"/>

    <Button
...
