<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupFragments.input_info_fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToOutline="false"
                android:gravity="center"
                android:padding="5dp"
                android:text="Enter Event Details"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="required"
                app:helperTextTextColor="#F40707">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterOrganizerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:maxLength="50"
                    app:counterEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="required"
                app:helperTextTextColor="#F40707">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name"
                    android:maxLength="30"
                    app:counterEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:helperText="required"
                app:helperTextTextColor="#F40707">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description"
                    android:maxLength="100"
                    app:counterEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/PosterPreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/event_poster_preview_desc"
                android:visibility="gone"
                android:scaleType="centerInside" />

            <Button
                android:id="@+id/uploadPosterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_upload"
                android:drawablePadding="8dp"
                android:text="Upload Poster" />

            <RadioGroup
                android:id="@+id/read_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:textAlignment="center">

                <RadioButton
                    android:id="@+id/button_new_QRcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="New QR code" />

                <RadioButton
                    android:id="@+id/button_existing_qrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:paddingHorizontal="5dp"
                    android:text="Existing QR code" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contextClickable="false"
                    android:text="@string/confirm" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>
