<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReuseQRcodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ReuseQRcodeHeader"
            style="@style/headerViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select a QR code" />

        <ListView
            android:id="@+id/ListOfQRCodes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmSelectedQRcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/confirm" />

</FrameLayout>