<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".StartupFragments.DisplayQrCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/header_display_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_header"
            android:text="@string/share_qr_code"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ShowQRCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher_foreground" />

        <!-- Button to save QR code to the device -->

        <!-- Button to share QR code via email -->
        <Button
            android:id="@+id/shareViaEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Share QR Code" />

        <Button
            android:id="@+id/openEventActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@android:string/ok" />

    </LinearLayout>
</FrameLayout>
